--- a/app/src/main/res/layout/list_item_operation.xml
+++ b/app/src/main/res/layout/list_item_operation.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -33,7 +34,7 @@
             android:layout_marginBottom="4dp"
             android:background="@drawable/bg_circle_primary"
             android:padding="12dp"
-            android:src="@drawable/ic_android" />
+            app:imageId="@{operation.categoryIconId}" />
 
         <android.support.v4.widget.Space
             android:layout_width="16dp"
@@ -70,7 +71,7 @@
                     style="@style/TextAppearance.OutletRadar.OperationValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{String.valueOf(operation.value)}"
+                    app:operationValue="@{operation.value}"
                     tools:text="-300 руб." />
 
             </LinearLayout>
@@ -103,6 +104,7 @@
                     android:id="@+id/timeTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    app:time="@{operation.date}"
                     tools:text="13:50" />
 
             </LinearLayout>
